[project]
name = "ratelimit_requests_cache"
version = "2023.10.27"
description = "Ratelimit Python requests, but only if they're not served from the cache"
authors = [
    {name = "Bart Broere", email = "mail@bartbroere.eu"},
]
dependencies = ["requests_cache", "ratelimit"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


